<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/leftRightMargin"
        android:layout_marginRight="@dimen/leftRightMargin"
        android:layout_marginBottom="@dimen/botomMargin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gameTitle_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/gameTitle"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/twoPlayer_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="twoPlayer_OnClick"
            android:text="@string/twoPlayerButton" />

        <Button
            android:id="@+id/onePlayer_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="onePlayer_OnClick"
            android:text="@string/onePlayerButton" />

        <Button
            android:id="@+id/about_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="about_OnClick"
            android:text="@string/aboutButton" />

        <Button
            android:id="@+id/quit_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="quit_OnClick"
            android:text="@string/quitButton" />

        <ImageView
            android:id="@+id/deco_imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="2"
            android:contentDescription="Tic-Tac-Toe_footerDeco"
            app:srcCompat="@drawable/tictactoe_deco" />
    </LinearLayout>
</RelativeLayout>