<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicTacToeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/leftRightMargin"
        android:layout_marginRight="@dimen/leftRightMargin"
        android:layout_marginBottom="@dimen/botomMargin"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/players_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/playerLeft_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/playerLeftNameHeader_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/playerOne" />

                <TextView
                    android:id="@+id/playerLeftName_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="XXX"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/playerLeftScore_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="36sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/playerRight_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/playerRightNameHeader_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/playerTwo" />

                <TextView
                    android:id="@+id/playerRightName_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="OOO"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/playerRightScore_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="36sp" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/TicTacToe_linearLayout"
                android:layout_width="825px"
                android:layout_height="825px"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ticTacToeSlot1_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="ticTacToeSlot1_button_OnClick"
                        android:scaleType="fitXY"
                        android:src="@drawable/tictactoe_bg" />

                    <ImageButton
                        android:id="@+id/ticTacToeSlot2_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="ticTacToeSlot2_button_OnClick"
                        android:scaleType="fitXY"
                        android:src="@drawable/tictactoe_bg" />

                    <ImageButton
                        android:id="@+id/ticTacToeSlot3_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="ticTacToeSlot3_button_OnClick"
                        android:scaleType="fitXY"
                        android:src="@drawable/tictactoe_bg" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ticTacToeSlot4_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="ticTacToeSlot4_button_OnClick"
                        android:scaleType="fitXY"
                        android:src="@drawable/tictactoe_bg" />

                    <ImageButton
                        android:id="@+id/ticTacToeSlot5_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="ticTacToeSlot5_button_OnClick"
                        android:scaleType="fitXY"
                        android:src="@drawable/tictactoe_bg" />

                    <ImageButton
                        android:id="@+id/ticTacToeSlot6_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="ticTacToeSlot6_button_OnClick"
                        android:scaleType="fitXY"
                        android:src="@drawable/tictactoe_bg" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ticTacToeSlot7_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="ticTacToeSlot7_button_OnClick"
                        android:scaleType="fitXY"
                        android:src="@drawable/tictactoe_bg" />

                    <ImageButton
                        android:id="@+id/ticTacToeSlot8_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="ticTacToeSlot8_button_OnClick"
                        android:scaleType="fitXY"
                        android:src="@drawable/tictactoe_bg" />

                    <ImageButton
                        android:id="@+id/ticTacToeSlot9_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="ticTacToeSlot9_button_OnClick"
                        android:scaleType="fitXY"
                        android:src="@drawable/tictactoe_bg" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/turn_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/turnText_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/turn" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/turnVisual_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/tictactoe_x_line" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/turnVisual_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="X"
                    android:textSize="36sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/menu_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="menu_OnClick"
                android:text="@string/menuButton" />

            <Button
                android:id="@+id/reset_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="reset_OnClick"
                android:text="@string/resetButton" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>